@@ -3,6 +3,10 @@ MVAPICH2 Changelog
 This file briefly describes the latest changes to the MVAPICH2 software
 package.  The logs are arranged in the "most recent first" order.
 
+03/08/2007
+
+* Change the finalization protocol for UD connection manager.
+
 03/02/2007
 
 * Fix for the "command line too long" problem. Contributed by Xavier Bru
